; ModuleID = '/home/carl/AnghaBench/tini/src/extr_tini.c_spawn.c'
source_filename = "/home/carl/AnghaBench/tini/src/extr_tini.c_spawn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"fork failed: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"exec %s failed: %s\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"Spawned child process '%s' with pid '%i'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spawn(i32* %0, i8** %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = call i32 (...) @fork()
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %3
  %14 = load i32, i32* @errno, align 4
  %15 = call i32 @strerror(i32 %14)
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i8*
  %18 = call i32 (i8*, i8*, ...) @PRINT_FATAL(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i8* %17)
  store i32 1, i32* %4, align 4
  br label %56

19:                                               ; preds = %3
  %20 = load i32, i32* %8, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %48

22:                                               ; preds = %19
  %23 = call i64 (...) @isolate_child()
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  store i32 1, i32* %4, align 4
  br label %56

26:                                               ; preds = %22
  %27 = load i32*, i32** %5, align 8
  %28 = call i64 @restore_signals(i32* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %26
  store i32 1, i32* %4, align 4
  br label %56

31:                                               ; preds = %26
  %32 = load i8**, i8*** %6, align 8
  %33 = getelementptr inbounds i8*, i8** %32, i64 0
  %34 = load i8*, i8** %33, align 8
  %35 = load i8**, i8*** %6, align 8
  %36 = call i32 @execvp(i8* %34, i8** %35)
  store i32 1, i32* %9, align 4
  %37 = load i32, i32* @errno, align 4
  switch i32 %37, label %40 [
    i32 128, label %38
    i32 129, label %39
  ]

38:                                               ; preds = %31
  store i32 127, i32* %9, align 4
  br label %40

39:                                               ; preds = %31
  store i32 126, i32* %9, align 4
  br label %40

40:                                               ; preds = %31, %39, %38
  %41 = load i8**, i8*** %6, align 8
  %42 = getelementptr inbounds i8*, i8** %41, i64 0
  %43 = load i8*, i8** %42, align 8
  %44 = load i32, i32* @errno, align 4
  %45 = call i32 @strerror(i32 %44)
  %46 = call i32 (i8*, i8*, ...) @PRINT_FATAL(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i8* %43, i32 %45)
  %47 = load i32, i32* %9, align 4
  store i32 %47, i32* %4, align 4
  br label %56

48:                                               ; preds = %19
  %49 = load i8**, i8*** %6, align 8
  %50 = getelementptr inbounds i8*, i8** %49, i64 0
  %51 = load i8*, i8** %50, align 8
  %52 = load i32, i32* %8, align 4
  %53 = call i32 @PRINT_INFO(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0), i8* %51, i32 %52)
  %54 = load i32, i32* %8, align 4
  %55 = load i32*, i32** %7, align 8
  store i32 %54, i32* %55, align 4
  store i32 0, i32* %4, align 4
  br label %56

56:                                               ; preds = %48, %40, %30, %25, %13
  %57 = load i32, i32* %4, align 4
  ret i32 %57
}

declare dso_local i32 @fork(...) #1

declare dso_local i32 @PRINT_FATAL(i8*, i8*, ...) #1

declare dso_local i32 @strerror(i32) #1

declare dso_local i64 @isolate_child(...) #1

declare dso_local i64 @restore_signals(i32*) #1

declare dso_local i32 @execvp(i8*, i8**) #1

declare dso_local i32 @PRINT_INFO(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
